--- a/composer.json
+++ b/composer.json
@@ -4,13 +4,9 @@
     "type": "library",
     "require": {
         "php": ">=5.5.9",
-        "symfony/console": "3.2.*",
-        "symfony/config": "3.2.*",
-        "symfony/finder": "3.2.*"
-    },
-    "require-dev": {
-        "symfony/translation": "3.2.*",
-        "phpunit/phpunit": "5.5.*"
+        "symfony/console": "^3.2.0",
+        "symfony/config": "^3.2.0",
+        "symfony/finder": "^3.2.0"
     },
     "license": "MIT",
     "authors": [
