--- a/composer.json
+++ b/composer.json
@@ -3,10 +3,10 @@
     "description": "CLI app to validate any kind of XML file, can accept an XSD definition file",
     "type": "library",
     "require": {
-        "php": ">=5.5.9",
-        "symfony/console": "^3.2.0",
-        "symfony/config": "^3.2.0",
-        "symfony/finder": "^3.2.0"
+        "php": ">=7.4",
+        "symfony/console": "^4.0|^5.0",
+        "symfony/config": "^4.0|^5.0",
+        "symfony/finder": "^4.0|^5.0"
     },
     "license": "MIT",
     "authors": [
@@ -15,8 +15,5 @@
             "email": "andrieu.travail@gmail.com"
         }
     ],
-    "autoload-dev": {
-        "psr-4": { "Tests\\": "tests/" }
-    },
     "bin": ["xml-linter"]
 }
